<resources>
    <string name="app_name">WeatherAppLearning</string>
    <string name="enter_number">Enter number</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="add">+</string>
    <string name="mul">x</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="enter_number_1">Enter Number 1</string>
    <string name="enter_number_2">Enter Number 2</string>
</resources>