<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_calculator"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/ed1"
        android:hint="@string/enter_number_1"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/ed2"
        android:hint="@string/enter_number_2"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:text="@string/add"
            android:textSize="35sp"
            app:cornerRadius="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/design_default_color_secondary"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            android:text="@string/mul"
            android:textSize="35sp"
            app:cornerRadius="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/design_default_color_secondary"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            android:text="@string/sub"
            android:textSize="35sp"
            app:cornerRadius="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/design_default_color_secondary"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            android:text="@string/div"
            android:textSize="35sp"
            app:cornerRadius="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/design_default_color_secondary"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>
